# CustomGraphicsRenderer

./: CMake.cmd  CMakeLists.txt  CustomGraphicsRenderer.sln
CustomGraphicsRenderer/: CustomGraphicsRenderer.vcxproj
res/shader/: changed.frag  changed.vert
src/: ResourceManager.cpp  ResourceManager.h  main.cpp
src/Window/: Window.cpp  Window.h
src/model/: Model.cpp  Model.h
src/renderer/: Framebuffer.cpp  Framebuffer.h  OGLRenderData.h  OGLRenderer.cpp  OGLRenderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  UserInterface.cpp  UserInterface.h  VertexBuffer.cpp  VertexBuffer.h
src/tools/: IInputHandler.h  InputHandler.cpp  InputHandler.h  Logger.cpp  Logger.h  Timer.cpp  Timer.h
